# WealthSignal-Decision-Engine

./: .dvcignore  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  README_Claude_Kishore_ChatLog.md  README_Local_Links.html  README_NPM_Commands.html  README_NPM_Commands.md  dvc.yaml  environment.yml  package-lock.json  package.json  pyproject.toml
.dvc/: .gitignore  config
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  model_issue.yml
.github/workflows/: ci.yml  db-migrate.yml
DevOps/Local/: docker-all-down.sh  docker-all-status.sh  docker-all-up.sh  open-local-links.sh
DevOps/Local/Observability/: docker-compose.yml
DevOps/Local/Observability/Grafana/provisioning/dashboards/: dashboards.yml
DevOps/Local/Observability/Grafana/provisioning/datasources/: datasources.yml
DevOps/Local/Observability/Prometheus/: prometheus.yml
DevOps/Local/airflow/: Dockerfile  docker-compose.yml  init.sh  reset.sh
DevOps/Local/kafka/: docker-compose.yml
DevOps/Local/middleware/: shutdown.sh  status.sh  up.sh
DevOps/Local/mlflow/: docker-compose.yml
DevOps/Local/portals/: shutdown.sh  status.sh  up.sh
DevOps/Local/postgres/: docker-compose.yml  init.sql
DevOps/Local/python/: activate.sh  create-env.sh  deactivate.sh  dvc-init.sh  post-setup.sh  remove-env.sh  scaffold.sh
airflow/dags/bootstrap/: create_mlflow_experiments.py
airflow/dags/ingestion/: load_product_catalog.py
db/: README.md  alembic.ini
db/alembic/: env.py
db/alembic/versions/: 20260418_1250_create_product_catalog_products.py
engine/wealthsignal/: __init__.py
engine/wealthsignal/config/: __init__.py
engine/wealthsignal/config/conf/: config.yaml
engine/wealthsignal/config/conf/data/: home_credit.yaml  lending_club.yaml  otto.yaml
engine/wealthsignal/config/conf/model/: form_classifier.yaml  rl_policy.yaml  segmentation.yaml  sequence.yaml
engine/wealthsignal/config/conf/tracking/: mlflow.yaml
engine/wealthsignal/config/conf/training/: debug.yaml  default.yaml  fast.yaml
engine/wealthsignal/data/: __init__.py
engine/wealthsignal/models/: __init__.py
engine/wealthsignal/serving/: __init__.py
engine/wealthsignal/tracking/: __init__.py
engine/wealthsignal/training/: __init__.py
engine/wealthsignal/utils/: __init__.py  gpu.py
middleware/admin_api/app/: job_tracker.py  main.py  schemas.py
middleware/admin_api/app/routes/: health.py  jobs.py  mlflow.py  models.py  product_catalog.py  system_health.py
middleware/customer_api/app/: main.py  schemas.py  store.py
middleware/customer_api/app/routes/: applications.py  health.py  me.py  offers.py
middleware/data_management_api/app/: airflow_client.py  main.py  schemas.py
middleware/data_management_api/app/routes/: artefacts.py  health.py  jobs.py  shortcuts.py
middleware/product_catalog_api/app/: enums.py  main.py  repository.py  schemas.py
middleware/product_catalog_api/app/db/: __init__.py  models.py  session.py
middleware/product_catalog_api/app/routes/: categories.py  health.py  products.py  search.py
middleware/product_catalog_api/app/seed/: catalog_data.py  generate_products.py
portals/admin_portal/: README.md  angular.json  package.json  tailwind.config.js
portals/admin_portal/src/: index.html  styles.scss
portals/admin_portal/src/app/: app.config.ts  app.routes.ts
portals/admin_portal/src/app/core/layout/: health-badge.component.ts  shell.component.scss  shell.component.ts
portals/admin_portal/src/app/core/models/: product.model.ts  system-health.model.ts
portals/admin_portal/src/app/core/services/: admin.service.ts  product-catalog.service.ts  system-health.service.ts
portals/admin_portal/src/app/features/administration/: mlflow-experiments.component.ts
portals/admin_portal/src/app/features/dashboard/: dashboard.component.ts
portals/admin_portal/src/app/features/product-catalog/: initial-load.component.ts  product-create.component.ts  product-list.component.ts  product-search.component.ts
portals/customer_portal/: README.md  angular.json  package.json  tailwind.config.js
portals/customer_portal/src/: index.html  styles.scss
portals/customer_portal/src/app/: app.component.ts  app.routes.ts
portals/customer_portal/src/app/core/layout/: shell.component.ts
portals/customer_portal/src/app/core/models/: product.model.ts
portals/customer_portal/src/app/core/services/: customer.service.ts  product-catalog.service.ts
portals/customer_portal/src/app/features/apply/: apply.component.ts
portals/customer_portal/src/app/features/landing/: landing.component.ts
portals/customer_portal/src/app/features/products/: products.component.ts
